@@ -14,3 +14,13 @@ mkdir -p ../class/vue/fonts && cp ../src/vue/fonts/*.otf ../class/vue/fonts/
 
 /* Commande pour compiler juste le package vue */
 javac -d ../class/ --module-path ../lib/javafx --add-modules javafx.controls,javafx.fxml ../src/vue/*.java && cp  ../src/vue/SecouristeView.fxml ../class/vue/ && cp ../src/vue/styles.css ../class/vue/ && mkdir -p ../class/vue/img && cp ../src/vue/img/*.png ../class/vue/img/ && mkdir -p ../class/vue/fonts &&  cp ../src/vue/fonts/*.otf ../class/vue/fonts/
+
+/* Commande pour comiler le controller et la vue */
+javac -d ../class/ \
+  --module-path ../lib/javafx \
+  --add-modules javafx.controls,javafx.fxml \
+  ../src/vue/*.java ../src/controller/*.java && \
+cp ../src/vue/*.fxml ../class/vue/ && \
+cp ../src/vue/styles.css ../class/vue/ && \
+mkdir -p ../class/vue/img && cp ../src/vue/img/*.png ../class/vue/img/ && \
+mkdir -p ../class/vue/fonts && cp ../src/vue/fonts/*.otf ../class/vue/fonts/
